2000-12-24 John R. Jackson <jrj@purdue.edu>

	* server-src/getconf.c: Fix free() of static text string (BUGGY) when
	  the parameter being looked up is bad.

2000-12-23 David Wolfskill  <dhw@whistle.com>

        * server-src/amcheck.c (start_server_check): Change directory
          writable check to be for the tapelist directory instead of
	  the config file directory.  Remove config file directory test.
        * man/amcheck.8.in: Add mention of tapelist directory and do
	  some other directory writable cleanup.

2000-12-13 John R. Jackson <jrj@purdue.edu>

	* docs/Makefile.am: Removing entries for missing RAIT/VTAPE-API files.

2000-12-13 John R. Jackson <jrj@purdue.edu>

	* tape-src/tapeio.c: De-commit the RAIT feature from 2.4.2.  It will
	  be in 2.5 and 2.4.2-multitape.
	* tape-src/tapeio.h: Ditto.
	* tape-src/Makefile.am: Ditto.

2000-12-12 John R. Jackson <jrj@purdue.edu>

	* client-src/sendbackup-gnutar.c: Fix regex pattern to accept blanks
	  or tabs.

2000-12-12 John R. Jackson  <jrj@purdue.edu> and Marc Mengel <mengel@fnal.gov>

	* Makefile.am: Work around problem with automake 1.4 not including
	  pkgdata_DATA.
	* docs/RAIT: New file.
	* docs/VTAPE-API: New file.
	* docs/Makefile.am: Include RAIT and VTAPE-API in distribution.
	  Work around problem with automake 1.4 not including pkgdata_DATA.
	* tape-src/output-rait.h: New File providing RAIT virtual tape type.
	* tape-src/output-rait.c: New File providing RAIT virtual tape type.
	* tape-src/Makefile.am: Add output-rait.c.
	* tape-src/tapeio.c: Major Surgery.
	  (vtable): New static table of virtual tape types.
	  (fdtable): New static table mapping file descriptors.
	  (tapefd_fsf_ioctl): Renamed tapefd_fsf, with added ioctl argument.
	  (tapefd_rewind_ioctl): Likewise.
	  (tapefd_unload_ioctl): Likewise.
	  (tapefd_weof_ioctl): Likewise.
	  (tapefd_status_ioctl): Likewise.
	  (tape_open): Now is a virtual tape table lookup and call.
	  (tape_access): Now is a switch through virtual tape table.