@@ -1,3 +1,8 @@
+2000-11-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/planner.c (analyze_estimate): pick incremental level
+	if no estimate of level 0.
+
 2000-12-24 John R. Jackson <jrj@purdue.edu>
 
 	* server-src/getconf.c: Fix free() of static text string (BUGGY) when
@@ -1318,7 +1323,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.426 2000/12/24 23:14:35 jrjackson Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.427 2000/12/29 17:46:30 martinea Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
